// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Citas {
  "citas": [
    {
      "fecha": "10-12-2020",
      "hora": "10:30",
      "id": 1677192600386,
      "mascota": "Hook",
      "propietario": "Tomas",
      "sintomas": "Solo duerme",
      "telefono": "84787651",
    },
  ],
}
`;

exports[` 2`] = `
Citas {
  "citas": [
    {
      "fecha": "10-12-2020",
      "hora": "10:30",
      "id": 1677192600386,
      "mascota": "Nuevo nombre",
      "propietario": "Tomas",
      "sintomas": "Solo duerme",
      "telefono": "84787651",
    },
  ],
}
`;

exports[` 3`] = `
Citas {
  "citas": [],
}
`;
